--- a/Projects/React/TicTacToeGame/README.adoc
+++ b/Projects/React/TicTacToeGame/README.adoc
@@ -11,4 +11,4 @@ http://localhost:3000
 === Understanding Code
 * Proper comments are provided in App.js
 
-image::without_state.png?raw=true[Tic Tac Toe]
+image::without_state1.png?raw=true[Tic Tac Toe]
