--- a/Frameworks/React_Native/README.adoc
+++ b/Frameworks/React_Native/README.adoc
@@ -2,3 +2,24 @@
 :toclevels: 5
 
 == link:https://reactnative.dev/docs/environment-setup[react-native]
+React Native is an open source framework for building Android and iOS applications using React and the app platform’s native capabilities
+
+== View
+* A view is the basic building block of UI. Even the smallest visual elements of an app, like a line of text or a button, are kinds of views. View can contain other views
+|===
+|Development|View Written in
+|Android| Java or Kotlin
+|iOS | Swift or Objective-C
+|React Native(Android or iOS)| JavaScript using React Native components
+|===
+
+== link:https://reactnative.dev/docs/components-and-apis[React Native Components]
+|===
+|Component|Description
+|<View>|Most basic component to build UI
+|<Text>|Displays, styles, and nests strings of text and even handles touch event
+|<Image>|
+|<ScrollView>|generic scrolling container
+|<TextInput>|Allows the user to enter text
+|===
+
