--- a/Languages/Programming_Languages/c++/C++11_14_17_20/README.adoc
+++ b/Languages/Programming_Languages/c++/C++11_14_17_20/README.adoc
@@ -17,5 +17,7 @@ optimize_for_synchronized
 
 == https://code-with-amitk.github.io/Languages/Programming/C++/C++_11,14,17,20,23/[C++20]
 === Abbreviated Function Template
+=== Aggregate initialization
+=== 3 way comparison
 === __has_cpp_attribute
 
