--- a/System-Design/Concepts/Containers/Kubernets/Terms/README.adoc
+++ b/System-Design/Concepts/Containers/Kubernets/Terms/README.adoc
@@ -8,255 +8,10 @@
   - _1. Supports Multiple Protocols:_ HTTP/1.1, HTTP/2, WebSocket, gRPC, and OpenAPI/Swagger
   - _2. Other Functions:_ traffic splitting, load balancing, rate limiting, and authentication.
 
-== link:https://kubernetes.io/docs/concepts/overview/working-with-objects/kubernetes-objects/[Kubernets Resources,Objects]
-* *Kubernets Resource = C++ Class* Resource is a blueprint for creating objects.
-* *kubernets Object = C++ Object* is Instance created from resource(using yaml,json file), having behaviour, state, metadata, and configuration.
-
-== Kubernets Resources/Objects
-=== 1. ClusterRole 
-Defines set of permissions or access control rules for resources across an entire Kubernetes cluster. it applies to all namespaces in the cluster.
-```yaml
-$ test.yaml
-apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRole
-metadata:                       //Metadata of clusterRole
-  name: my-cluster-role
-  annotations:                  //Annotations: any number of key-value pairs, and can be used to provide additional context
-    my-annotation: "example"
-    namespace:     "test"
-rules:
-- apiGroups: [""]
-  resources: ["pods"]
-  verbs: ["get", "list", "watch"]
-
-```
-
-=== link:https://kubernetes.io/docs/concepts/configuration/configmap/#configmap-object[2. ConfigMap. kind: configmap]
-* Object storing configuration of [POD](#ka)
-* Unlike most Kubernetes objects(Eg: [Deployment](#dep) that have a spec), a ConfigMap has data and binaryData fields. Both the data field and the binaryData are optional
-* A Kubernetes resource that stores configuration data in key-value pairs.
-
-==== Creating a configmap
-We can copy
-```yaml
-# cat templates/configmap-jams.yaml
-apiVersion: v1
-king: ConfigMap
-metadata:           //Metadata store additional data about the ConfigMap and is typically defined as a key-value pair
-  name: jams-config
-  labels:
-    app: {{ .Values.image.app }}    //Pick from values.yaml
-data:
-  jams_config.yaml: |-
-    servicename: jamsc
-    kafka:
-      brokers: {{ .Values.kafka.brokers }}    //Pick from values.yaml
-      topics:
-        {{- toYaml .Values.kafka.topics | nindent 10 }}
-```
-
-=== link:https://kubernetes.io/docs/concepts/workloads/controllers/deployment/[3. Deployment]
- - "Deployment" object defines how an application should be deployed and managed in a cluster. 
- - It defines declarative configuration for running a containerized application and declares desired number of replicas of the application is always running.
-```yaml
-$ cat templates/Deployment.yaml
-apiVersion: apps/v1       #(Required) Which version of the Kubernetes API you're using to create this object
-kind: Deployment          #(Required) What kind of object you want to create
-metadata:                 #(Required) Data that helps uniquely identify the object
-  name: {{ .Values.image.app }}   //Taken from values.yaml
-spec:                     #(Required) What state you desire for the object
-  replicas: {{ .Values.replicaCount }}
-  volumes:                //specifies the storage volumes that should be available to containers within the deployment
-    - name: jams-cfg-vol
-      configMap:
-        name: jamc-config
-    - name: jams-srx-cfg-vol
-
-$ kubectl apply -f test.yaml
-```
-
-=== link:https://kubernetes.io/docs/concepts/workloads/controllers/job/[4. Job]
-This object runs a specific task to completion. will create 1 or more pods and execute continously until job completes.
-```yaml
-apiVersion: batch/v1
-kind: Job
-metadata:
-  name: pi                #Name of Job
-spec:
-  template:
-    spec:
-      serviceAccountName: "Test"    // Name of ServiceAccount that should be used by the pod that is created to run the Job
-      containers:                   //Container configuration for job
-      - name: pi                    // Container name to be created by this Job
-        image: perl:5.34.0
-        env:                        //environment variables to set for the container.
-          - name: DATABASE_HOST     //this env variable is set using a SecretKeyRef
-            valueFrom:
-              secretKeyRef:
-                name: {{ .Release.Name }}-test-db
-                key: host
-      restartPolicy: Never
-  backoffLimit: 4
-```
-
-=== 4. POD
-A basic unit of deployment in Kubernetes that runs one or more containers.
-
-=== link:https://kubernetes.io/docs/reference/access-authn-authz/rbac/[5. RBAC (Role-based Access Control)]
-*  refers to the authorization mechanism that allows one Kubernetes service or workload to access another service or resource within a cluster based on predefined roles and permissions(eg: configmaps, secrets etc). The RBAC API declares 4 kinds of Kubernetes object
-
-==== a. Role
-* Defines who (subjects) can perform actions/verbs(create, get, update etc) on which resources(eg: pods, deployments, services). Roles specify the permissions.
-* Example-1
-```yaml
-apiVersion: rbac.authorization.k8s.io/v1    //API version of RBAC being defined
-kind: Role
-rules:
-  - apiGroups:                //Rule1: Grant Permission to create Tokenreviews in group(authentication.k8s.io)
-      - authentication.k8s.io
-    verbs:
-      - create
-    resources:
-      - tokenreviews
-  - apiGroups:                //Rule2: Grant Permission to get jobs in group(batch)
-      - batch
-    verbs:
-      - get
-    resources:
-      - jobs
-  - apiGroups: ["coordination.k8s.io"]    //Rule3: Grant Permission to perform actions in group(coordination.k8s.io)
-    resources: ["leases"]
-    verbs: ["get", "watch", "list", "delete", "update", "create", "patch"]
-```
-* Example-2: Microservice(Tams) can invoke grpc endpoint on microservice(fams)
-```yaml
-apiVersion: rbac.test.com/v1
-kind: Role
-metadata:
-  name: tams-to-fams          //Role name. Role is defined for MicroService-1(tams) to Microservice-2(fams) communication
-spec:                          //Defines rules of Role
-  capabilities:                  //Specific capabilities defined for this Role
-  - service: famsproto.FamsRPCService    //Specifies the gRPC service for which the permissions are granted.
-    methods:
-    - GetServiceCertificate      // Lists the specific methods or operations within the specified gRPC service for which permissions are granted. 
-```
-
-==== b. RoleBinding
-* Binds the Role(defined above) to serviceAccount OR Grants the permissions defined in a role to Subjects(eg: serviceAccount, user, set of users).
-* Example: user:jane can read pods in default namespace
-```yml
-apiVersion: rbac.authorization.k8s.io/v1
-kind: RoleBinding
-metadata:
-  name: tams        //Service name
-  namespace: default
-subjects:
-  - kind: User              #This Role can read pods in default namespace
-    name: jane            
-  - kind: ServiceAccount    #Role is bindded to service account=tams
-    name: tams
-roleRef:                                  # "roleRef" specifies the binding to a Role / ClusterRole
-  kind: Role                              # this must be Role or ClusterRole
-  name: pod-reader                        # You need to already have a Role named "pod-reader" in that namespace.
-  apiGroup: rbac.authorization.k8s.io
-```
-
-==== c. CapabilityMapping
-* Container will have Runtime(linux), CM can:
-** 1. Give capabilities to a process running within linux container, Eg(process to modify n/w config, mouting file system, accessing h/w devices etc)
-** 2. link:https://github.com/amitkumar50/pvt-research/blob/master/Projects/Juniper/Problem_Req/Jul22_Jan23.md#f1[JAMS capability mapping] When mapping-a is enabled, service can call method1,2. When mapping-b is enabled, service can call method3,4. 
-
-=== 6. ServiceAccount
-This object allows pod to authenticate and access other parts of cluster using RBAC.
-
-=== 7. Services
-In Kubernetes, Service(or microservice) is logical set of Pods. Service exposes REST endpoints(eg: POST) & other services interact by calling these endpoints.
-
-==== Service Object
-* To define a logical set of Pods and a policy for accessing them.
-* What's present in Object? _1. IP address/"cluster IP:_ Other services to access the this pod.
-** 0. apiVersion:_ The version of the Kubernetes API that is used to create the Service object.
-** Format: `group/version`. This is a REQUIRED field in all kubernets objects.
-    - Version
-      - apiVersion: v1    //refers to the core Kubernetes API
-      - `apiVersion: ambassador/v1 & getambassador.io/v2`     //refer to custom APIs defined by the Ambassador API Gateway.Provide additional functionality specific to  [Ambassador API Gateway](#aagw).
-  - _1. Name of service:_
-  - _2.  selector:_ This is used to define the set of Pods that the Service will target. Selects Pods with the label "app=MyApp"
-  - _3. Service Stable IP Address._ It also exposes port 80 on the Service's stable IP address
-  - _4. targetport:_ Port 80 is mapped to port 8080 on the Pods
-  - _5. type:_ Defines type of the Service, which can be ClusterIP, NodePort, LoadBalancer, or ExternalName.
-    - _ClusterIP:_ Service which exposes a set of Pods internally to the cluster, using a stable IP address.
-```yml
-apiVersion: v1                              //0
-kind: Service
-metadata:
-  name: {{ .Values.image.app }}-metrics     //1
-spec:
-  selector:
-    app: MyApp                              //2
-  ports:
-    - name: http
-      protocol: TCP
-      port: 80                              //3
-      targetPort: 8080                      //4
-  type: LoadBalancer                        //5
-```
-
-=== link:https://kubernetes.io/docs/concepts/configuration/secret/[8. Secrets]
-* Kubernets on AWS, Secrets is used to store sensitive information(Eg: passwords, API keys, and other credentials), that should not be exposed in plaintext within Kubernetes manifests or configuration files.
-* *Why secrets object?* Secrets can be created independently of the Pods that use them, now there is no risk of the Secret data being exposed during the creating, viewing, and editing Pods
-
-==== Creating Secrets
-===== 1. Using Kubernetes command line interface (CLI) OR 
-===== 2. Using the AWS Management Console. 
-===== 3. Using yaml file
-```c
-// This yaml file stores sensitive data(eg: passwords or API keys), in an encrypted format within a Kubernetes cluster
-
-kind: Secret
-metaData:
-  name: {{ $name }}           //will be replaced with a specific name at deployment time
-  annotations:                    //Annotations that indicate these secret should be created before the installation of helm chart, and deleted after chart is uninstalled.
-     "helm.sh/hook": pre-install
-     "helm.sh/hook-weight": "-2"
-     "helm.sh/hook-delete-policy": before-hook-creation
-type: opaque                    //type of secret. Opaque means the data stored in the secret is an arbitrary byte array and the Secret does not have a predefined structure.
-data:                           //key-value pairs of sensitive data that will be stored within the secret.
-  host: {{ .Values.test.host | b464enc }}       //key=host, value=take from values.yaml and encoded in base64 format using the b64enc function
- 
-  {{ - $previous := {lookup = "v1" "Secret" .Release.Namespace $name }}   //key=password
-  {{ - if .Values.identityDB.password }}                               
-  password: {{ .Values.identityDB.password | b64enc }}           //if values is in values.yaml file store after encoding in base64 format using the b64enc function
-{{ - end - }}
-```
-
-==== Access the secrets
-===== 1. Mounted as a volume within a pod OR 
-===== 2. Provided as environment variable inside container
-a. Secret Created
-```c
-# k get -n namespace secret
-jams_database
-
-# k get -n namespace secret jams_database -o yaml   // contents inside secret
-data:
- host: kaslknaldk
- name: 9u2ioihas019
- password: end823985
- user: 4062ksndjsdf92
- 
-# echo end823985 | base64 --decode                  // Decrypt content
-test123    
-```
-b. Accessed using manifest by application
-```yaml
-templates/job-db-create.yaml
-  - name: DB_PASSWORD
-    valueFrom:
-      secretKeyRef:
-        name: {{ .Release.Name }}-database
-        key: password
-```
+== link:https://code-with-amitk.github.io/System_Design/Concepts/Containers/Kubernets/[Kubernets Resources and Objects]
+* Kubernets Resource
+* kubernets Object
+** ClusterRole, ConfigMap, Deployment, Job, RBAC, ServiceAccount, Services, Secrets, POD
 
 <a name=ns></a>
 ## Namespaces
